--- a/PruebaTecnicaReporteDeTiempo/appsettings.json
+++ b/PruebaTecnicaReporteDeTiempo/appsettings.json
@@ -9,5 +9,9 @@
       "Microsoft.Hosting.Lifetime": "Information"
     }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+  "Jwt": {
+    "Key": "qwertyasdfgzxcv1234567890",
+    "Issuer": "https://localhost:44310/login/"
+  }
 }
